# pure_pitch

./: .gitignore  Justfile  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
assets/models/: basic_pitch.onnx
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/analysis_persistence_20260114_archived/: metadata.json  plan.md  spec.md
conductor/archive/audio_validation_20260112/: metadata.json  spec.md
conductor/archive/complete_offline_analysis_20260108/: metadata.json
conductor/archive/fix_android_mic_playback_20260120/: index.md  metadata.json  spec.md
conductor/archive/global_monophony_20260113/: metadata.json  plan.md  spec.md
conductor/archive/monophonic_stability_20260113/: plan.md  spec.md
conductor/archive/pitch_visualization_stability_20260113_archived/: metadata.json  plan.md
conductor/code_styleguides/: dart.md  flutter.md  rust.md
conductor/tracks/advanced_playback_20260114/: metadata.json  plan.md  spec.md
conductor/tracks/analysis_persistence_20260114/: metadata.json  plan.md
conductor/tracks/audio_validation_20260112/: baseline_report.md  plan.md
conductor/tracks/complete_offline_analysis_20260108/: plan.md  spec.md
conductor/tracks/echo_cancellation_20260114/: metadata.json  plan.md  spec.md
conductor/tracks/fix_android_mic_playback_20260120/: plan.md
conductor/tracks/internationalization_20260114/: metadata.json  plan.md  spec.md
conductor/tracks/monophonic_stability_20260113/: metadata.json  plan.md
conductor/tracks/pitch_visualization_stability_20260113/: plan.md  spec.md
conductor/tracks/vocal_activity_20260120/: plan.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  bootstrap.dart  main.dart  pitch_visualizer.dart
lib/core/database/: app_database.dart  app_database.g.dart
lib/core/extensions/: context_extension.dart
lib/core/logger/: rust_logger.dart  talker.dart  talker.g.dart
lib/core/router/: router.dart  router.g.dart
lib/core/theme/: app_theme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: aec.rs  basic_pitch_postproc.rs  dsp.rs  logging.rs  mod.rs  pitch.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_pure_pitch.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_pure_pitch.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: download_libs.sh  generate_demo_audio.dart
test/: widget_test.dart
test/core/: audio_analysis_accuracy_test.dart  audio_generator_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+59 files in other folders)
