[package]
name = "rust_lib_pure_pitch"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
log = "0.4"
# Audio Decoding
symphonia = { version = "0.5", features = ["mp3", "aac", "wav", "isomp4"] }
# Resampling
rubato = "1.0"
# Math & DSP
ndarray = "0.17"
rustfft = "6.4"
# Real-time Pitch Detection
pitch-detection = "0.3"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"

# AI Inference (ONNX Runtime) - Target Specific
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows", target_os = "android"))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "download-binaries"] }

[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_generated)', 'cfg(frb_expand)'] }