[package]
name = "rust_lib_pure_pitch"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
log = "0.4"
chrono = "0.4"
talker_rust_logger = { path = "../packages/talker_rust_logger/rust" }
# Audio Decoding
symphonia = { version = "0.5", features = ["mp3", "aac", "wav", "isomp4"] }
# Resampling
rubato = "1.0"
# Math & DSP
ndarray = "0.17"
rustfft = "6.4"
# Real-time Pitch Detection
pitch-detection = "0.3"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"

aec3 = "0.1.3"
once_cell = "1.21.3"

# AI Inference (ONNX Runtime) - Target Specific
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows", target_os = "android"))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "download-binaries"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
oslog = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "macos")))'.dependencies]
env_logger = "0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_generated)', 'cfg(frb_expand)'] }
